--- a/index.html
+++ b/index.html
@@ -1,132 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="A mobile simulator designed to demonstrate mobile interface design.">
-  <meta name="keywords" content="mobile, simulator, mobile design, mobile app">
-  <meta name="author" content="Your Name or Company">
-  <meta http-equiv="Content-Language" content="en">
-
-  <!-- Canonical Link -->
-  <link rel="canonical" href="https://www.yourwebsite.com/pc-simulator" />
-
-  <!-- Open Graph for Social Media -->
-  <meta property="og:title" content="PC Simulator">
-  <meta property="og:description" content="A mobile simulator designed to demonstrate mobile interface design.">
-  <meta property="og:image" content="https://www.yourwebsite.com/pc-simulator-image.jpg">
-  <meta property="og:url" content="https://www.yourwebsite.com/pc-simulator">
-  <meta property="og:type" content="website">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="PC Simulator">
-  <meta name="twitter:description" content="A mobile simulator designed to demonstrate mobile interface design.">
-  <meta name="twitter:image" content="https://www.yourwebsite.com/pc-simulator-image.jpg">
-  <meta name="twitter:creator" content="@yourtwitterhandle">
-
-  <!-- Favicon -->
-  <link rel="icon" href="https://www.yourwebsite.com/favicon.ico" type="image/x-icon">
-
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'UA-XXXXX-Y');
-  </script>
-
-  <!-- Microsoft Clarity -->
-  <script type="text/javascript">
-    (function(c,l,a,r,i,t,y) {
-      window.clarity=window.clarity||function(){(clarity.q=clarity.q||[]).push(arguments)};
-      clarity('set', 'anonymizeIP', true);
-      i=l.createElement('script');i.async=1;i.src=r;i.type='text/javascript';
-      t=l.getElementsByTagName('script')[0];t.parentNode.insertBefore(i,t);
-    })(document,window,'script','https://www.clarity.ms/tag/XXXXXX');
-  </script>
-
-  <title>PC Simulator</title>
-
-  <style>
-    /* Global Styles */
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-    }
-
-    .mobile-container {
-      width: 360px;
-      height: 640px;
-      border: 16px solid black;
-      border-radius: 16px;
-      background-color: #fff;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .content {
-      font-size: 1.2rem;
-      color: #333;
-    }
-
-    /* Adjustments for PC */
-    @media (min-width: 768px) {
-      .mobile-container {
-        width: 600px;
-        height: 1000px;
-      }
-
-      .content {
-        font-size: 1.5rem;
-      }
-    }
-
-    @media (min-width: 1024px) {
-      .mobile-container {
-        width: 800px;
-        height: 1400px;
-      }
-
-      .content {
-        font-size: 1.8rem;
-      }
-    }
-
-    /* Additional responsiveness for larger screens */
-    @media (min-width: 1200px) {
-      body {
-        justify-content: flex-start;
-      }
-
-      .mobile-container {
-        margin-top: 50px;
-      }
-    }
-  </style>
+    <title>Image to ICO Converter</title>
 </head>
-
 <body>
-  <div class="mobile-container">
-    <div class="content">
-      <p>Mobile Simulator Screen</p>
-      <p>PC Version: Adjusted for larger screens.</p>
-    </div>
-  </div>
-</body>
+    <h1>Image to ICO Converter</h1>
+    <input type="file" id="imageInput" accept="image/*">
+    <br>
+    <label for="imageWidth">Image Width (px):</label>
+    <input type="number" id="imageWidth" value="32">
+    <br>
+    <label for="imageHeight">Image Height (px):</label>
+    <input type="number" id="imageHeight" value="32">
+    <br>
+    <button id="convertButton">Convert to ICO</button>
+    <br>
+     <a id="downloadLink" style="display: none;">Download ICO</a>
+      <script type="module">
+       import init, { image_to_ico } from './pkg/image_to_ico.js';
 
+        async function run() {
+            await init();
+
+            const imageInput = document.getElementById('imageInput');
+            const convertButton = document.getElementById('convertButton');
+            const downloadLink = document.getElementById('downloadLink');
+            const imageWidthInput = document.getElementById('imageWidth');
+             const imageHeightInput = document.getElementById('imageHeight');
+             convertButton.addEventListener('click', async () => {
+                  const imageFile = imageInput.files[0];
+
+                  if (!imageFile) {
+                    alert("Please select an image")
+                      return;
+                  }
+                   const reader = new FileReader();
+                   reader.readAsArrayBuffer(imageFile);
+                   reader.onload = async function(){
+                    const imageArrayBuffer = reader.result;
+                    const imageUint8Array = new Uint8Array(imageArrayBuffer);
+                    const width = parseInt(imageWidthInput.value);
+                    const height = parseInt(imageHeightInput.value);
+                      try{
+                          const icoData = image_to_ico(imageUint8Array, width, height);
+                           const blob = new Blob([icoData], {type: 'image/x-icon'});
+                         const objectUrl = URL.createObjectURL(blob);
+                        downloadLink.href = objectUrl;
+                        downloadLink.download = "converted.ico";
+                        downloadLink.style.display = 'inline-block';
+                          }catch(e){
+                          alert("Error: " + e);
+                        }
+                    }
+
+
+             });
+         }
+        run();
+    </script>
+</body>
 </html>
